Update CircleCI config with working directory fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,16 +4,37 @@ jobs:
   build:
     docker:
       - image: cimg/node:18.17.0
+    working_directory: ~/project/customer-payments-portal
     steps:
       - checkout
-      - run: npm install
-      - run: npm run build || echo "No build step"
       - run:
-          name: Run SonarQube Scan
+          name: Install dependencies
           command: |
+            cd server
+            npm install
+      - run:
+          name: Build backend
+          command: |
+            cd server
+            npm run build || echo "No build step"
+
+  sonarQubeScan:
+    docker:
+      - image: cimg/node:18.17.0
+    working_directory: ~/project/customer-payments-portal
+    steps:
+      - checkout
+      - run:
+          name: Install Sonar Scanner
+          command: |
+            cd server
             npm install -g sonar-scanner
+      - run:
+          name: Run SonarCloud Scan
+          command: |
+            cd server
             sonar-scanner \
-              -Dsonar.host.url=//https://sonarcloud.io \
+              -Dsonar.host.url=https://sonarcloud.io \
               -Dsonar.projectKey=ST10215222_CustomerPortal_INSY7314 \
               -Dsonar.organization=ST10215222 \
               -Dsonar.sources=. \
@@ -24,3 +45,6 @@ workflows:
   build-and-scan:
     jobs:
       - build
+      - sonarQubeScan:
+          requires:
+            - build
